--- a/ros-express-backend/package.json
+++ b/ros-express-backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "type": "module",
   "scripts": {
-    "start": "rmdir /s /q dist && npx tsc && node --env-file=.env dist/server.js",
+    "start": "rimraf dist && npx tsc && node --env-file=.env dist/server.js",
     "dev": "nodemon --watch . --exec \"node --env-file=.env --loader ts-node/esm\" src/server.ts"
   },
   "keywords": [],
@@ -28,6 +28,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.8.7",
     "nodemon": "^3.1.7",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
