Separate deploy command for Docker (without .env)

--- a/ros-express-backend/Dockerfile
+++ b/ros-express-backend/Dockerfile
@@ -20,5 +20,5 @@ RUN npm install
 # Copy the rest of your application code
 COPY . .
 
-# Use the node start script
-CMD ["npm", "run", "start"]
+# Use the node deploy script
+CMD ["npm", "run", "deploy"]
