--- a/ros-express-backend/package.json
+++ b/ros-express-backend/package.json
@@ -5,6 +5,7 @@
   "main": "server.ts",
   "type": "module",
   "scripts": {
+    "deploy": "rimraf dist && npx tsc && node dist/server.js",
     "start": "rimraf dist && npx tsc && node --env-file=.env dist/server.js",
     "dev": "nodemon --watch . --exec \"node --env-file=.env --loader ts-node/esm\" src/server.ts"
   },
