--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,6 +14,7 @@ env:
 
 jobs:
   build:
+    if: startsWith(github.ref, 'refs/tags/docker-v')
     runs-on: ubuntu-latest
     permissions:
       contents: read
