--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -36,7 +36,7 @@ jobs:
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
-        if: endsWith(${{ steps.extract_version.outputs.version }}, "-SNAPSHOT") == false && github.event_name != 'pull_request'
+        if: ${{ github.event_name != 'pull_request' && !endsWith(steps.extract_version.outputs.version, '-SNAPSHOT') }}
         uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
         with:
           registry: ${{ env.REGISTRY }}
@@ -46,7 +46,7 @@ jobs:
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
-        if: endsWith(${{ steps.extract_version.outputs.version }}, "-SNAPSHOT") == false
+        if: ${{ github.event_name != 'pull_request' && !endsWith(steps.extract_version.outputs.version, '-SNAPSHOT') }}
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
